# recurrency

./: .env.sample  .gitignore  HEADER-APACHE2  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: benchmarks-run.yml  check-migrations.yml  check-polkadot-releases.yml  e2e-testnet.yml  merge-pr.yml  release.yml  verify-pr-commit.yml
.github/workflows/common/codecov/: action.yml
.github/workflows/common/try-runtime-migrations/: action.yml
common/helpers/: Cargo.toml
common/primitives/: Cargo.toml
common/primitives/src/: lib.rs  utils.rs
designdocs/: README.md  accounts.md  batched_messages.md  capacity.md  delegation.md  graph_sdk.md  message_storage.md  passkey_p256.md  provider_boosting_economic_model.md  provider_boosting_implementation.md  provider_permissions.md  provider_registration.md  schema.md  stateful_storage.md  user-handles.md
docker/: collator-node-local.dockerfile  collator-node-local.overview.md  docker-compose.yml  frequency-start.sh  parachain-node-mainnet.overview.md  parachain-node-testnet.overview.md  parachain-node.dockerfile  standalone-node.dockerfile  standalone-node.overview.md
e2e/: README.md  package-lock.json  package.json
e2e/capacity/: capacity_rpc.test.ts  replenishment.test.ts  staking.test.ts  transactions.test.ts  unstaking.test.ts
e2e/handles/: handles.test.ts
e2e/load-tests/: signatureRegistry.test.ts
e2e/messages/: addIPFSMessage.test.ts
e2e/miscellaneous/: frequency.test.ts  utilityBatch.test.ts
e2e/msa/: createMsa.test.ts  msaKeyManagement.test.ts
e2e/passkey/: passkeyProxy.test.ts
e2e/proxy-pallet/: proxy.test.ts
e2e/scaffolding/: apiConnection.ts  extrinsicHelpers.ts  funding.ts  helpers.ts
e2e/scenarios/: grantDelegation.test.ts
e2e/schemas/: createSchema.test.ts
e2e/schemas/fixtures/: avroGraphChangeSchemaType.ts
e2e/stateful-pallet-storage/: handleItemized.test.ts  handlePaginated.test.ts  handleSignatureRequired.test.ts
e2e/sudo/: sudo.test.ts
e2e/time-release/: timeRelease.test.ts
js/api-augment/: CHANGELOG.md  CONTRIBUTING.md  README.md  index.ts  package-lock.json  package.json  tsconfig.json
js/api-augment/definitions/: index.ts
js/api-augment/test/: index.test.ts
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli/src/: benchmarking.rs  cli.rs  command.rs  lib.rs  run_as_localchain.rs  run_as_parachain.rs
node/service/: Cargo.toml
node/service/src/: block_sealing.rs  chain_spec.rs  lib.rs  service.rs
node/service/src/chain_spec/: frequency.rs  frequency_dev.rs  frequency_paseo.rs
node/service/src/rpc/: frequency_rpc.rs  mod.rs
node/src/: main.rs
pallets/: README.md  README.template.md
pallets/capacity/: Cargo.toml  README.md
pallets/capacity/src/: lib.rs  weights.rs
pallets/frequency-tx-payment/: Cargo.toml  README.md
pallets/frequency-tx-payment/src/: lib.rs  weights.rs
pallets/frequency-tx-payment/src/rpc/: Cargo.toml
pallets/frequency-tx-payment/src/rpc/src/: lib.rs
pallets/frequency-tx-payment/src/rpc/src/tests/: mod.rs
pallets/frequency-tx-payment/src/runtime-api/: Cargo.toml
pallets/frequency-tx-payment/src/runtime-api/src/: lib.rs
pallets/frequency-tx-payment/src/tests/: mock.rs  pallet_tests.rs
pallets/handles/: Cargo.toml  README.md
pallets/handles/src/: weights.rs
pallets/handles/src/handles-utils/: Cargo.toml
pallets/handles/src/rpc/: Cargo.toml
pallets/handles/src/rpc/src/: lib.rs
pallets/handles/src/runtime-api/: Cargo.toml
pallets/messages/: Cargo.toml  README.md
pallets/messages/src/: weights.rs
pallets/messages/src/rpc/: Cargo.toml
pallets/messages/src/rpc/src/: lib.rs
pallets/messages/src/runtime-api/: Cargo.toml
pallets/msa/: Cargo.toml  README.md
pallets/msa/src/: lib.rs  offchain_storage.rs  weights.rs
pallets/msa/src/rpc/: Cargo.toml
pallets/msa/src/rpc/src/: lib.rs
pallets/msa/src/runtime-api/: Cargo.toml
pallets/msa/src/tests/: other_tests.rs
pallets/passkey/: Cargo.toml  README.md
pallets/passkey/src/: weights.rs
pallets/schemas/: Cargo.toml  README.md
pallets/schemas/src/: weights.rs
pallets/schemas/src/migration/: v4.rs
pallets/schemas/src/rpc/: Cargo.toml
pallets/schemas/src/rpc/src/: lib.rs
pallets/schemas/src/runtime-api/: Cargo.toml
pallets/stateful-storage/: Cargo.toml  README.md
pallets/stateful-storage/src/: weights.rs
pallets/stateful-storage/src/rpc/: Cargo.toml
pallets/stateful-storage/src/rpc/src/: lib.rs
pallets/stateful-storage/src/runtime-api/: Cargo.toml
pallets/time-release/: Cargo.toml  README.md
pallets/time-release/src/: weights.rs
resources/: frequency-paseo.json  frequency-paseo.raw.json  frequency.json  frequency.raw.json
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  lib.rs
runtime/common/src/extensions/: check_nonce.rs
runtime/common/src/weights/: block_weights.rs  extrinsic_weights.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  rocksdb_weights.rs
runtime/frequency/: Cargo.toml
runtime/frequency/src/: apis.rs  lib.rs
runtime/system-runtime-api/: Cargo.toml
runtime/system-runtime-api/src/: lib.rs
scripts/: generate_js_definitions.sh  generate_specs.sh  healthcheck.sh  init.sh  kill_freq.sh  run_benchmarks.sh  run_collator.sh  run_e2e_tests.sh
tools/ci/release-notes/: release-notes.md.tera
tools/ci/scripts/: test-changelog-sanitizer.sh
tools/genesis-data/: schemas.mjs
tools/scripts/: show-runtime-version.sh
tools/state-copy/: schemas.mjs
