[package]
authors = ["Recurrency"]
build = "build.rs"
description = "Substrate node for Recurrency"
edition = "2021"
homepage = "https://recurrency.xyz"
license = "Apache-2.0"
name = "recurrency"
repository = "https://github.com/rustadot/recurrency/"
version = "0.0.0"

[[bin]]
name = "recurrency"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# Recurrency Runtime
recurrency-cli = { path = "cli" }
recurrency-service = { path = "service" }

[features]
std = []
default = []
runtime-benchmarks = ["recurrency-cli/runtime-benchmarks"]
recurrency = ["recurrency-service/recurrency", "recurrency-cli/recurrency"]
recurrency-no-relay = [
  "recurrency-service/recurrency-no-relay",
  "recurrency-cli/recurrency-no-relay",
]
recurrency-local = [
  "recurrency-service/recurrency-local",
  "recurrency-cli/recurrency-local",
]
recurrency-testnet = [
  "recurrency-service/recurrency-testnet",
  "recurrency-cli/recurrency-testnet",
]
recurrency-lint-check = [
  "recurrency-service/recurrency-lint-check",
  "recurrency-cli/recurrency-lint-check",
]
