[package]
authors = ["Recurrency"]
description = "Substrate CLI options for Recurrency node"
edition = "2021"
homepage = "https://recurrency.xyz/"
license = "Apache-2.0"
name = "cli-opt"
repository = "https://github.com/rustadot/recurrency/"
version = "0.0.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
