[package]
authors = ["Recurrency"]
description = "Substrate cli for recurrency node"
edition = "2021"
homepage = "https://recurrency.xyz/"
license = "Apache-2.0"
name = "recurrency-cli"
repository = "https://github.com/rustadot/recurrency/"
version = "0.0.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
hex-literal = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Recurrency Runtime
common-primitives = { default-features = false, path = "../../common/primitives" }
common-runtime = { package = "common-runtime", path = "../../runtime/common", default-features = false }
recurrency-runtime = { package = "recurrency-runtime", path = "../../runtime/recurrency", default-features = false }
recurrency-service = { package = "recurrency-service", path = "../service", default-features = false, optional = true }
pallet-msa = { package = "pallet-msa", path = "../../pallets/msa", default-features = false }
pallet-recurrency-tx-payment = { package = "pallet-recurrency-tx-payment", path = "../../pallets/recurrency-tx-payment", default-features = false }
pallet-handles = { package = "pallet-handles", path = "../../pallets/handles", default-features = false }
pallet-stateful-storage = { package = "pallet-stateful-storage", path = "../../pallets/stateful-storage", default-features = false }
cli-opt = { default-features = false, path = "../cli-opt" }

# Substrate
frame-benchmarking-cli = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-cli = { workspace = true, optional = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true, optional = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-executor = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-storage-weight-reclaim = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
std = ["sp-io/std", "sp-api/std", "frame-support/std", "sp-runtime/std", "sp-core/std"]
cli = [
  "recurrency-service",
  "sp-core",
  "sc-cli",
  "sc-service",
  "frame-benchmarking-cli",
  "frame-benchmarking",
]
default = ["std", "cli"]
runtime-benchmarks = [
  "polkadot-cli/runtime-benchmarks",
  "recurrency-runtime/runtime-benchmarks",
  "sc-service?/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "recurrency-service/try-runtime",
  "sp-runtime/try-runtime"
]
on-chain-release-build = ["sp-api/disable-logging"]
recurrency = ["recurrency-service/recurrency"]
recurrency-no-relay = ["recurrency-service/recurrency-no-relay"]
recurrency-local = ["recurrency-service/recurrency-local"]
recurrency-testnet = ["recurrency-service/recurrency-testnet"]
recurrency-lint-check = [
  "recurrency",
  "recurrency-no-relay",
  "recurrency-local",
  "recurrency-testnet",
  "recurrency-service/recurrency-lint-check",
]
