[package]
authors = ["Recurrency"]
description = "Substrate node for recurrency"
edition = "2021"
homepage = "https://recurrency.xyz"
license = "Apache-2.0"
name = "recurrency-service"
repository = "https://github.com/rustadot/recurrency/"
version = "0.0.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true }

derive_more = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, default-features = true }
hex-literal = { workspace = true }

jsonrpsee = { workspace = true, features = ["server"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "time", "parking_lot"] }
serde_json = { workspace = true }

# Recurrency Runtime
recurrency-runtime = { path = "../../runtime/recurrency", optional = true }
common-runtime = { path = "../../runtime/common" }
cli-opt = { default-features = false, path = "../cli-opt" }
# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-executor = { workspace = true }
sc-cli = { workspace = true }
sc-keystore = { workspace = true }

sc-service = { workspace = true }
sc-client-api = { workspace = true }

sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }

sc-sysinfo = { workspace = true }

sc-rpc = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-wasm-interface = { workspace = true }

substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }
# Recurrency
common-helpers = { default-features = false, path = "../../common/helpers" }
common-primitives = { default-features = false, path = "../../common/primitives" }
pallet-messages-rpc = { path = "../../pallets/messages/src/rpc" }
pallet-messages-runtime-api = { path = "../../pallets/messages/src/runtime-api" }
pallet-msa-rpc = { path = "../../pallets/msa/src/rpc" }
pallet-msa-runtime-api = { path = "../../pallets/msa/src/runtime-api" }
pallet-schemas-rpc = { path = "../../pallets/schemas/src/rpc" }
pallet-schemas-runtime-api = { path = "../../pallets/schemas/src/runtime-api" }
pallet-stateful-storage-rpc = { path = "../../pallets/stateful-storage/src/rpc" }
pallet-stateful-storage-runtime-api = { path = "../../pallets/stateful-storage/src/runtime-api" }
pallet-handles-rpc = { path = "../../pallets/handles/src/rpc" }
pallet-handles-runtime-api = { path = "../../pallets/handles/src/runtime-api" }
pallet-recurrency-tx-payment-rpc = { path = "../../pallets/recurrency-tx-payment/src/rpc" }
pallet-recurrency-tx-payment-runtime-api = { path = "../../pallets/recurrency-tx-payment/src/runtime-api" }
system-runtime-api = { path = "../../runtime/system-runtime-api" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
sc-client-api = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = ["sp-api/std", "sp-core/std"]
runtime-benchmarks = [
  "recurrency-runtime/runtime-benchmarks",
  "polkadot-service/runtime-benchmarks",
]
recurrency = ["recurrency-runtime"]
recurrency-no-relay = ["recurrency-runtime"]
recurrency-local = ["recurrency-runtime"]
recurrency-testnet = ["recurrency-runtime"]
recurrency-lint-check = [
  "recurrency",
  "recurrency-no-relay",
  "recurrency-local",
  "recurrency-testnet",
]
try-runtime = ["recurrency-runtime/try-runtime", "polkadot-service/try-runtime"]
