[package]
name = "system-runtime-api"
version = "0.0.0"
description = "Additional RPC package for Recurrency"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
serde_json = { workspace = true, features = ["alloc"] }
# Substrate
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
# Recurrency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "frame-system/std",
    "frame-support/std",
    "common-primitives/std",
    "sp-std/std",
    "sp-runtime/std",
]
