[package]
authors = ["Recurrency"]
description = "Handles Utilities"
edition = "2021"
build = "build.rs"
homepage = "https://recurrency.xyz"
license = "Apache-2.0"
name = "handles-utils"
version = "0.0.0"
publish = false
repository = "https://github.com/rustadot/recurrency/"

[dependencies]
phf = { workspace = true, features = ["macros"] }
oorandom = { workspace = true }
unicode-normalization = { workspace = true }
twox-hash = { workspace = true, features = ["digest_0_10"] }

[features]
default = ["std"]
std = []
