[package]
name = "pallet-handles-runtime-api"
version = "0.0.0"
description = "A package that adds Runtime Api for the Handles pallet"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
# Substrate
sp-std = { workspace = true }
sp-api = { workspace = true }
# Recurrency related dependencies
common-primitives = { default-features = false, path = "../../../../common/primitives" }

[features]
default = ["std"]
std = ['sp-std/std', 'sp-api/std', 'common-primitives/std']
