[package]
name = "pallet-messages-runtime-api"
version = "0.0.0"
description = "A package that adds Runtime Api for Messages pallet"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
# Substrate
sp-api= { workspace = true }
sp-std= { workspace = true }
frame-support = { workspace = true }
# Recurrency related dependencies
common-primitives = { default-features = false, path = "../../../../common/primitives" }

[features]
default = ["std"]
std = ["frame-support/std", "sp-api/std", "common-primitives/std"]
