[package]
name = "pallet-msa-rpc"
version = "0.0.0"
description = "A package that adds RPC to Msa pallet"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
rayon = { workspace = true }
# Recurrency crates
pallet-msa-runtime-api = { default-features = false, path = "../runtime-api" }
common-primitives = { default-features = false, path = "../../../../common/primitives" }
common-helpers = { default-features = false, path = "../../../../common/helpers" }
# Substrate crates
sp-api = { workspace = true }
sp-std = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-offchain = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time", "parking_lot"] }
sc-client-api = { workspace = true }

[features]
default = ["std"]
std = [
  'parity-scale-codec/std',
  "sp-api/std",
  "sp-runtime/std",
  "sp-offchain/std",
  "sp-core/std",
  "pallet-msa-runtime-api/std",
  'common-primitives/std',
  "common-helpers/std",
]
