[package]
name = "pallet-msa-runtime-api"
version = "0.0.0"
description = "A package that adds Runtime Api for Msa pallet"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
# Substrate
sp-api = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
# Recurrency related dependencies
common-primitives = { default-features = false, path = "../../../../common/primitives" }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-api/std",
  "sp-std/std",
  "frame-support/std",
  'common-primitives/std',
]
test = []