[package]
name = "pallet-schemas-rpc"
version = "0.0.0"
description = "RPC package for schemas"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
# Recurrency crates
pallet-schemas-runtime-api = { path = "../runtime-api", default-features = false }
common-primitives = { path = '../../../../common/primitives', default-features = false }
common-helpers = { path = '../../../../common/helpers', default-features = false }
# Substrate crates
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-api = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }
sp-blockchain = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time", "parking_lot"] }
sc-client-api = { workspace = true }

[features]
default = ["std"]
std = [
  "sp-std/std",
  "sp-api/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "pallet-schemas-runtime-api/std",
  "common-primitives/std",
  "common-helpers/std",
]
