[package]
name = "pallet-schemas-runtime-api"
version = "0.0.0"
description = "RPC runtime package for schemas"
authors = ["Recurrency"]
license = "Apache-2.0"
publish = false
homepage = "https://recurrency.xyz"
repository = "https://github.com/rustadot/recurrency/"
edition = "2021"

[dependencies]
# Substrate
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
# Recurrency related dependencies
common-primitives = { default-features = false, path = "../../../../common/primitives" }

[features]
default = ["std"]
std = ["sp-api/std", "frame-support/std", "common-primitives/std", "sp-std/std"]
